# npfl138

./: README.md
labs/: .flake8  .gitignore  README.md  faq.md  labs.md  pyproject.toml  requirements.txt  setup.cfg
labs/01/: example_keras.py  example_keras_tensorboard.py  example_pytorch.py  example_pytorch_tensorboard.py  mnist.py  mnist_layers_activations.py  numpy_entropy.py  numpy_entropy_model_1.txt  numpy_entropy_model_2.txt  pca_first.keras.py  pca_first.py
labs/02/: gym_cartpole.py  mnist_training.py  sgd_backpropagation.py  sgd_manual.py
labs/03/: example_keras_manual_batches.py  example_keras_models.py  example_manual.py  mnist.py  mnist_ensemble.py  mnist_regularization.py  uppercase.py  uppercase_data.py
labs/04/: cifar10.py  cifar10_v2.py  cifar_competition.py  mnist_cnn.py  mnist_multiple.py  torch_dataset.py
labs/05/: cags_classification.py  cags_dataset.py  cags_segmentation.py  cnn_manual.py  image_classification.py  mnist.py
labs/05/development/: cags_dataset.py
labs/06/: bboxes_utils.py  svhn_competition.py  svhn_dataset.py
labs/07/: 3d_recognition.py  modelnet.py  sequence_classification.py  tagger_cle.packed.py  tagger_cle.py  tagger_competition.py  tagger_we.packed.py  tagger_we.py
labs/08/: ctc_manual.py  morpho_analyzer.py  morpho_dataset.py  projector_export.py  sequence_classification.py  speech_recognition.py  tagger_cle.py  tagger_competition.py  tagger_ner.py  tagger_we.py
labs/09/: common_voice_cs.py  ctc_loss.py  lemmatizer_attn.py  lemmatizer_competition.py  lemmatizer_noattn.py  projector_export.py  speech_recognition.py  tagger_ner.py
labs/10/: example_transformers.py  lemmatizer_attn.py  lemmatizer_competition.py  lemmatizer_noattn.py  morpho_dataset.py  reading_comprehension.py  sentiment_analysis.py  tagger_transformer.py
labs/11/: 3d_recognition.py  example_transformers.py  morpho_dataset.py  reading_comprehension.py  reading_comprehension_dataset.py  reinforce.py  reinforce_baseline.py  reinforce_pixels.py  sentiment_analysis.py  tagger_transformer.py  tagger_transformer.unfinished.py  text_classification_dataset.py  trainable_module.py  vae.py
labs/12/: cart_pole_pixels_environment.py  dcgan.py  gan.py  homr_competition.py  homr_dataset.py  reinforce.py  reinforce_baseline.py  reinforce_pixels.py  rl_utils.py  vae.py
labs/13/: dcgan.py  ddim.py  ddim_attention.py  ddim_conditional.py  flow_matching.py  flow_matching_attention.py  flow_matching_conditional.py  gan.py  image64_dataset.py  mnist_v2.py
labs/13/unfinished/: ddim.py  ddim_attention.py  ddim_conditional.py
labs/14/: learning_to_learn.py  multi_gpu_training_example.py  omniglot_dataset.py  tacotron.py  tacotron_aligned.py
labs/npfl138/: README.md  __init__.py  callback.py  first_time.py  format_logdir_impl.py  initializers_override.py  logger.py  loss.py  metric.py  metrics.py  progress_logger.py  rl_utils.py  startup.py  startup_impl.py  trainable_module.py  transformed_dataset.py  type_aliases.py  utils.py  version.py  vocabulary.py
labs/npfl138/callbacks/: __init__.py  keep_best_weights.py  save_best_weights.py  save_weights.py
labs/npfl138/datasets/: __init__.py  cags.py  cifar10.py  common_voice_cs.py  downloader.py  gym_cartpole_dataset.py  homr_dataset.py  image64_dataset.py  mnist.py  modelnet.py  morpho_analyzer.py  morpho_dataset.py  reading_comprehension_dataset.py  svhn.py  text_classification_dataset.py  tfrecord_dataset.py  tts_dataset.py  uppercase_data.py
labs/npfl138/docs/: callback.md  index.md  logger.md  loss.md  metric.md  metrics.md  trainable_module.md  transformed_dataset.md  type_aliases.md  utilities.md  vocabulary.md
labs/npfl138/envs/: __init__.py  cart_pole_pixels.py  cart_pole_pixels_interactive.py
labs/npfl138/loggers/: __init__.py  base_logger.py  filesystem_logger.py  multi_logger.py  tensorboard_logger.py  wandb_logger.py
labs/npfl138/losses/: __init__.py  binary_cross_entropy.py  (+2 more)
(+370 files in other folders)
