[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npfl138"
version = "2425.0.0.a0"
authors = [
  { name="Milan Straka", email="straka@ufal.mff.cuni.cz" },
]
description = "Modules used by the Deep Learning Course NPFL138"
readme = "npfl138/README.md"
requires-python = ">=3.10"
dependencies = [
  # Main PyTorch
  "torch ~= 2.6.0",
  "torchaudio ~= 2.6.0",
  "torchvision ~= 0.21.0",
  # Large collection of PyTorch metrics
  "torchmetrics ~= 1.6.1",
  # Huggingface Transformers
  "transformers ~= 4.48.1",
  # Used by torchaudio for CTC decoding
  "flashlight-text ~= 0.0.7",
  # Gymnasium package including the pygame used for GUI
  "gymnasium ~= 1.0.0",
  "pygame ~= 2.6.1",
  # TensorBoard for inspecting logs
  "tensorboard ~= 2.18.0",
]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
license = { text="MPL-2.0" }

[project.urls]
Homepage = "https://ufal.mff.cuni.cz/courses/npfl138"
Repository = "https://github.com/ufal/npfl138"

[tool.setuptools]
license-files = [ "npfl138/LICENSE" ]
