[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npfl138"
version = "2526.1.2"
authors = [
  { name="Milan Straka", email="straka@ufal.mff.cuni.cz" },
]
description = "Modules used by the Deep Learning Course NPFL138"
readme = "npfl138/README.md"
requires-python = ">=3.11"
dependencies = [
  # Main PyTorch
  "torch ~= 2.10.0",
  "torchaudio ~= 2.10.0",
  "torchvision ~= 0.25.0",
  # Large collection of PyTorch metrics
  "torchmetrics ~= 1.8.2",
  # PyTorch Image Models
  "timm ~= 1.0.24",
  # Huggingface Transformers
  "transformers ~= 5.2.0",
  # Gymnasium package including the pygame used for GUI
  "gymnasium ~= 1.2.3",
  "pygame-ce ~= 2.5.6",
  # TensorBoard for inspecting logs
  "tensorboard ~= 2.20.0",
  "setuptools < 80.9",  # ==82 removes pkg_resources; <80.9 does not warn about deprecation
  # Matplotlib for plotting
  "matplotlib ~= 3.10.8",
]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]
license = { text="MPL-2.0" }

[project.urls]
Homepage = "https://ufal.mff.cuni.cz/courses/npfl138"
Repository = "https://github.com/ufal/npfl138"

[tool.setuptools]
license-files = [ "npfl138/LICENSE" ]
